# pick-up-games-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  run.sh
backend/: admin.py  constants.py  exceptions.py  logger.py  models.py  serializers.py  urls.py  views.py
backend/api/: comments.py  court_details.py  courts.py  images.py  ratings.py  surface.py  timeframes.py
backend/migrations/: 0001_initial.py  0002_court_created_playingtimeframe_created.py  0002_courtdetails_public_courtdetails_rim_type_and_more.py  0003_alter_court_created_alter_playingtimeframe_created.py  0003_alter_courtimage_image.py  0004_alter_court_created_alter_playingtimeframe_created.py  0004_alter_rating_creation_date.py  0005_alter_court_address_alter_court_details.py  0005_alter_rating_court.py  0006_alter_address_street_name_and_more.py  0006_alter_comment_court_alter_court_address_and_more.py  0007_alter_playingtimeframe_court.py  0007_comment_user_ip_rating_user_ip_and_more.py  0008_court_actual_players_number_and_more.py  0008_remove_rating_creation_date_alter_comment_court_and_more.py  0009_rating_creation_date.py  0010_remove_court_expected_players_number_and_more.py  0011_playingtimeframe_finished.py  0012_alter_courtimage_court.py
backend/services/: court_service.py  expected_players_number_updater.py  image_service.py  request_utils.py
core/: settings.py
pug_project/: asgi.py  debug_settings.py  settings.py  urls.py  wsgi.py
